# OpenCVProject

./: CMakeLists.txt  main.cpp
